# hyprstep

./: .editorconfig  LICENSE-MIT  README.md  hyprpm.toml  meson.build
src/: main.cpp
